--- a/src/components/SkappBar/SkappBar.module.scss
+++ b/src/components/SkappBar/SkappBar.module.scss
@@ -13,7 +13,7 @@
   }
   @media screen and (min-width: $break-extra-large) {
     height: pixelsToEms(100);
-    justify-content: flex-start;
+    justify-content: space-between;
   }
 }
 
