Refactor SkappSearchInput to make it more reusable

--- a/src/components/SkappBar/SkappBar.module.scss
+++ b/src/components/SkappBar/SkappBar.module.scss
@@ -36,3 +36,11 @@
     @include SkappRadius(0px, 0px, 50px, 0px); 
   }
 }
+
+form {
+  display: none;
+  @media screen and (min-width: $break-extra-large) {
+    display:flex;
+    align-items: center;
+  }
+}
