Implements basic functionality of SkappHome component

--- a/src/Skapp.module.scss
+++ b/src/Skapp.module.scss
@@ -1,7 +1,7 @@
 @import './components/Partials/SkappUtils';
 .background{
   background-color: #ECEFF0;
-  height: 100%;
+  height: 100vh;
   background: url('./images/Waves.svg') bottom right / contain no-repeat, url('./images/Continents.svg') 20% center /contain repeat-y;
   @media screen and (min-width: $break-extra-large){
     background: url('./images/Waves.svg') bottom right / contain no-repeat, url('./images/Continents.svg') 20% center /contain no-repeat;
