--- a/src/components/SkappButton/SkappButton.module.scss
+++ b/src/components/SkappButton/SkappButton.module.scss
@@ -16,6 +16,9 @@
   &:hover {
     background-color: darken($color: $primary-color, $amount: 1%);
   }
+  &:focus{
+    outline: none;
+  }
 }
 
 .icon {
