--- a/src/components/SkappBar/SkappBar.module.scss
+++ b/src/components/SkappBar/SkappBar.module.scss
@@ -1,4 +1,5 @@
 @import '../Partials/SkappUtils';
+@import '../partials/SkappValues';
 .bar, .logoBox{
   transition: cubic-bezier(.39,-0.07,.47,1.05) all 1s;
 }
@@ -7,12 +8,14 @@
   display: flex;
   justify-content: center;
   background-color: $primary-color;
+  height: $bar-height-small;
   @media screen and (min-width: $break-medium) {
-    background-color: rgba(255, 255, 255, 0.85);
-    height: pixelsToEms(65);
+    background-color: $white-transparent-opaque;
+    height: $bar-height-medium;
   }
   @media screen and (min-width: $break-extra-large) {
     justify-content: space-between;
+    height: $bar-height-extra-large;
   }
 }
 
