--- a/src/components/Partials/_SkappValues.scss
+++ b/src/components/Partials/_SkappValues.scss
@@ -4,3 +4,4 @@ $bar-height-medium: pixelsToEms(65);
 $bar-height-extra-large: pixelsToEms(52);
 $white-transparent-opaque:rgba(255, 255, 255, 0.85);
 $white-transparent-translucent:rgba(255, 255, 255, 0.1);
+$grey-transparent-opaque: rgba(60,60,60,0.7);
