--- a/src/components/SkappChart/SkappChart.module.scss
+++ b/src/components/SkappChart/SkappChart.module.scss
@@ -5,15 +5,15 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: calc(100vh - #{$bar-height-small});
+  //height: calc(100vh - #{$bar-height-small});
   padding-top: 1.75em;
   @media screen and (min-width:$break-medium){
     padding-top: 4em;
-    height: calc(100vh - #{$bar-height-medium});
+   // height: calc(100vh - #{$bar-height-medium});
   }
   @media screen and (min-width:$break-extra-large){
     padding-top: 3em;
-    height: calc(100vh - #{$bar-height-extra-large});
+   // height: calc(100vh - #{$bar-height-extra-large});
   }
 }
 
