Implements SkappDetail component using data from Open Weather API

--- a/src/components/SkappHome/SkappHome.module.scss
+++ b/src/components/SkappHome/SkappHome.module.scss
@@ -6,10 +6,16 @@
   height: calc(100vh - #{$bar-height-small});
   justify-content: center;
   align-items: center;
-  @media screen and (min-width: $break-medium) {
+  @media screen and (max-width: $break-medium) and (orientation: landscape) {
+    height:calc(100vw - #{$bar-height-small});
+  }
+  @media screen and (max-width: $break-large) and (orientation: landscape) {
+    height:calc(100vw - #{$bar-height-medium});
+  }
+  @media screen and (min-width: $break-medium) and (orientation: portrait) {
     height: calc(100vh - #{$bar-height-medium});
   }
-  @media screen and (min-width: $break-extra-large) {
+  @media screen and (min-width: $break-extra-large) and (orientation: portrait) {
     height: calc(100vh - #{$bar-height-extra-large});
   }
 }
