Implements the rendering of the SkappSettingsWidget component

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,11 @@ html,body, #root{
   display:flex;
   flex-direction: column;
 }
+
+body {
+  overflow-x: hidden;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
