--- a/src/components/SkappDetail/SkappDetail.module.scss
+++ b/src/components/SkappDetail/SkappDetail.module.scss
@@ -32,7 +32,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width:90%;
+  width:85%;
   @media screen and (min-width:$break-medium){
     width:50%;
   }
@@ -74,21 +74,21 @@ h1,h2,h3,h4{
 h1 {
   color: $white-transparent-opaque;
   font-family: 'NimbusSanL';
-  font-size: 40px;
+  font-size: pixelsToEms(35);
   font-style:normal;
   font-weight:100;
 }
 
 h4{
   @extend h1;
-  font-size: 16px;
+  font-size: pixelsToEms(12);
   font-family: 'NimbusSanL';
 }
 
 
 h3 {
   color: $primary-color;
-  font-size: 35px;
+  font-size: pixelsToEms(25);
   font-family: 'NimbusSanL';
   font-weight: 600;
   padding:0.5em;
@@ -106,7 +106,7 @@ h3 {
 
 h2{
   color:$grey-transparent-opaque;
-  font-size: 25px;
+  font-size: pixelsToEms(22);
   font-family: 'NimbusSanL';
   font-weight: 100; 
 }
@@ -132,7 +132,7 @@ h2,h3{
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  font-size: 40px;
+  font-size: pixelsToEms(25);
   font-weight: bold;
   padding:0.35em;
   position:relative;
