--- a/src/components/SkappSettingsWidget/SkappSettingsWidget.module.scss
+++ b/src/components/SkappSettingsWidget/SkappSettingsWidget.module.scss
@@ -1,52 +1,60 @@
 @import '../Partials/SkappUtils';
 @import '../partials/SkappValues';
-
-.widgetContainer{
+.widgetContainer {
   position: absolute;
-  top:80px;
-  right:0;
-  display:flex;
+  top: 80px;
+  right: 0;
+  display: flex;
   flex-direction: row-reverse;
   align-items: center;
-  @media screen and (min-width:$break-medium){
+  @media screen and (min-width: $break-medium) {
     top:120px;
   }
 }
 
-.settingsBox{
-  @include SkappRadius(15px,0px,0px,15px);
+.settingsBox {
+  @include SkappRadius(15px, 0px, 0px, 15px);
   @include SkappShadow();
   background-color: white;
-  padding:0.85em;
-  display:flex;
+  padding: 0.85em;
+  display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.settingsOpener{
-  @include SkappRadius(15px,0px,0px,15px);
+.settingsOpener {
+  @include SkappRadius(15px, 0px, 0px, 15px);
   @include SkappShadow();
   background-color: $primary-color;
-  padding:0.85em;
-  display:flex;
+  padding: 0.85em;
+  display: flex;
   justify-content: center;
-  width:20%;
+  width: 20%;
 }
 
 .icon {
   color: $white-transparent-opaque;
 }
 
-.units, .theme {
-  display:flex;
+.units,
+.theme {
+  display: flex;
   align-items: center;
 }
 
-p{
-  margin:0; 
-  padding:0;
+p {
+  margin: 0;
+  padding: 0;
   font-family: 'NimbusSanL';
-  font-weight:100;
-  font-style:normal;
+  font-weight: 100;
+  font-style: normal;
   color: $grey-transparent-opaque;
+  -webkit-user-select: none;
+  /* Safari */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* IE10+/Edge */
+  user-select: none;
+  /* Standard */
 }
