--- a/src/components/SkappSettingsWidget/SkappSettingsWidget.module.scss
+++ b/src/components/SkappSettingsWidget/SkappSettingsWidget.module.scss
@@ -16,7 +16,7 @@
   @include SkappRadius(15px, 0px, 0px, 15px);
   @include SkappShadow();
   background-color: white;
-  padding: 0.85em;
+  padding: 2em 1.5em;
   display: flex;
   flex-direction: column;
   align-items: center;
