Remove the underline of buttons wrapped by Link component

--- a/src/components/SkappBar/SkappBar.module.scss
+++ b/src/components/SkappBar/SkappBar.module.scss
@@ -64,6 +64,13 @@ form.SkappBar {
   }
 }
 
+.link{
+  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+  }
+}
+
 /*
 *   SkappBack Style
 */
