--- a/src/components/SkappForecastArray/SkappForecastArray.module.scss
+++ b/src/components/SkappForecastArray/SkappForecastArray.module.scss
@@ -78,3 +78,10 @@ ul{
   justify-content: center;
   align-items: center;
 }
+
+.link{
+  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+  }
+}
